# kegg-cli

./: README.md  genes  input.txt  pyproject.toml
src/kegg_cli/: _utils.py  arg_enums.py  conventional_cmds.py  database_enums.py  get_seq.py  kegg_conv.py  main.py
tests/: test_conv.py  test_conventional.py  test_find.py  test_get.py  test_get_seq.py  test_info.py  test_link.py  test_list.py
tests/data/: expected_aaseq.fasta  expected_arg_aaseq.fasta  expected_arg_ntseq.fasta  expected_module_ntseq.fasta  expected_pathway_aaseq.fasta  expected_pathway_ntseq.fasta  rsz00966_genes_id.tsv
